--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
         height: 500px;
         border: solid 1px gray;
     }
+
+    body {
+      background: black;
+      color: #afafaf;
+    }
+#player #ap,
+#player #pl {
+      background: black;
+      color: #afafaf;
+}
+#player #ap {
+  border-top: 1px solid gray;
+}
+.material-icons.md-dark {
+  color: #afafaf;
+}
+.ap-progress {
+  background: #3f3f3f;
+}
     </style>
   </head>
 
