--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Audio player HTML5</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#000000">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/AudioPlayer.css">
@@ -53,7 +54,7 @@
           .then(playList => {
             AP.init({
                 container:'#player',//a string containing one CSS selector
-                volume   : 0.7,
+                volume   : 0.1,
                 autoPlay : true,
                 notification: false,
                 playList: playList
